<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">番茄钟</string>
    <string name="main_title_name">番茄工作钟</string>
    <string name="test_item_alarm_title_name">闹钟</string>
    <string name="test_item_alarm_content">闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟闹钟</string>
    <string name="total_active_list">活动清单</string>
    <string name="today_active_list">今日代办</string>
    <string name="urgent_active_list">计划外紧急</string>
    <string name="progress_list">大活动进度</string>
    <string name="active_record">活动记录</string>
    <string name="active_analysis">活动分析</string>
    <string name="about">关于</string>
    <string name="set">设置</string>
    <string name="tomato_alarm_start">番茄钟已启动</string>
    <string name="prompt">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="prompt_app_exit_info">您确定要退出程序吗？</string>

</resources>