<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_closedialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_xlarge"
        android:paddingTop="@dimen/padding_xlarge"
        android:text="@string/prompt_app_exit_info"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/b_close_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/selector_black_gray"
            android:padding="@dimen/padding_normal"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/b_close_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/selector_black_gray"
            android:padding="@dimen/padding_normal"
            android:text="@string/ok"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>