<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.squareup.timessquare.CalendarPickerView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="@dimen/padding_large"
            android:scrollbarStyle="outsideOverlay" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_menu_total_active_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@drawable/selector_white_gray"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_large"
            android:text="@string/total_active_list"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_title_one" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_menu_today_active_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@drawable/selector_white_gray"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_large"
            android:text="@string/today_active_list"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_title_one" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_menu_urgent_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@drawable/selector_white_gray"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_large"
            android:text="@string/urgent_active_list"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_title_one" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_menu_progress_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@drawable/selector_white_gray"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_large"
            android:text="@string/progress_list"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_title_one" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_menu_active_record"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@drawable/selector_white_gray"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_large"
            android:text="@string/active_record"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_title_one" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_menu_active_analysis"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@drawable/selector_white_gray"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_large"
            android:text="@string/active_analysis"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_title_one" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />
    </LinearLayout>

</ScrollView>